src/pages/ViewDigitalCard/ViewDigitalCard.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Roboto" !important;
  background-color: #000;
}
body p {
  font-family: "Roboto" !important;
}

.viewDigitalBusinessCardContainer {
  background-image: url("../../assets/images/background/abstract_black_01.jpg");
  background-size: cover;
  background-position: center;
  color: white;
  /* font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; */
}

/* Company Container */

.viewDigitalCard_CompanyBrief {
  display: flex;
  flex-direction: column; /* Stack items vertically */
  justify-content: center;
  align-items: center;
  text-align: center; /* Center text content horizontally */
}

.viewDigitalCard_CompanyLogo {
  margin-top: 20vh;
  margin-bottom: 20vh; /* Adjust margin bottom as needed */
}

.viewDigitalCard_CompanyVision-1 {
  /* margin-left: 10vw; */
  font-size: 24px; /* Adjust font size */
  font-weight: bold; /* Make the text bold */
  color: whitesmoke; /* Change text color */
  text-shadow: 1px 1px 1px whitesmoke(0, 0, 0, 0.2); /* Add a subtle text shadow */
}

/* Card Container */
.viewCardContainer {
  max-width: 100%;
  overflow-x: hidden;
  background-color: white;
  color: black;
  border-radius: 10px;
  display: grid;
  grid-template-columns: 1fr; /* single column */
  grid-auto-rows: minmax(min-content, max-content); /* automatic row height */
  row-gap: 20px; /* gap between rows */
}

/* View Card Images Section */
.viewCardImagesSection {
  position: relative; /* Ensure positioning context */
  height: 25vh;
  width: 100%;
  /* background-image: url("../../assets/images/background/office_cover_photo_01.jpg"); */
  background-size: cover;
  background-position: center;
  display: flex;
}

.viewCardImages_profileImage {
  position: absolute; /* Position absolutely within the relative parent */
  top: 100%;
  left: 25%;
  transform: translate(-50%, -50%); /* Center the image */
  z-index: 1; /* Ensure profile image stays above the cover image */
}

/* View Card Profile Bio Section */
.viewCardProfileBioDetails {
  width: 100%;
  grid-column: 1; /* span the entire column */
  padding: 20px 0; /* add some padding for better readability */
  margin-top: 5vh; /* Ensure profile bio starts after the profile picture ends */
  z-index: 2; /* Ensure profile bio stays above the cover and profile image */
}

/* View Card About Me Section */
.viewCardAboutMe_bioTxt {
  font-size: small;
}

/* View Card Company Info Section */
.viewCardCompanyInfo {
  font-size: small;
}

/* View Card Social Links Section */
.viewCardSocialLinks {
  width: 100%;
  grid-column: 1;
  padding: 0px;
  margin-top: 1vh;
  margin-bottom: 6vh;
  z-index: 2;
}

.view_card_content_title {
  font-size: larger;
  font-weight: 500;
}

.view_card_content_sub_title {
  font-size: small;
  font-weight: 400;
  /* color: gray; */
}

/* .label_title {
  font-size: large;
  font-weight: 400;
  color: black;
} */

.button-content {
  display: flex;
  align-items: center;
}

.social_custom_icon {
  margin-right: 5px; /* Adjust as needed to add spacing between icon and text */
}

.html_text_render {
  font-size: small;
  color: gray;
}

.html_link {
  color: gray;
  text-decoration: none;
}

.html_link:hover {
  color: gray;
  text-decoration: underline;
}
.viewCardProductAndServices img {
  width: 100%;
}

footer.viewDigitalCard_Footer {
  background: transparent;
  padding: 1vh;
  text-align: center;
  font-weight: 700;
}

